--- a/module-api/build.gradle
+++ b/module-api/build.gradle
@@ -4,6 +4,10 @@ plugins {
     id 'io.spring.dependency-management' version '1.1.7'
 }
 
+springBoot {
+    mainClass = 'com.whiskey.WhiskeyApplication'
+}
+
 group = 'org.example'
 version = '0.0.1-SNAPSHOT'
 
@@ -18,6 +22,8 @@ repositories {
 }
 
 dependencies {
+    implementation project(':module-common')
+
     implementation 'org.springframework.boot:spring-boot-starter-web'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
