--- a/module-common/build.gradle
+++ b/module-common/build.gradle
@@ -1,6 +1,5 @@
 plugins {
-    id 'java'
-    id 'org.springframework.boot' version '3.5.0'
+    id 'java-library'
     id 'io.spring.dependency-management' version '1.1.7'
 }
 
@@ -15,14 +14,4 @@ java {
 
 repositories {
     mavenCentral()
-}
-
-dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-}
-
-tasks.named('test') {
-    useJUnitPlatform()
 }
