--- a/module-domain/build.gradle
+++ b/module-domain/build.gradle
@@ -4,10 +4,6 @@ plugins {
     id 'io.spring.dependency-management' version '1.1.7'
 }
 
-springBoot {
-    mainClass = 'com.whiskey.WhiskeyApplication'
-}
-
 group = 'org.example'
 version = '0.0.1-SNAPSHOT'
 
@@ -17,13 +13,18 @@ java {
     }
 }
 
+configurations {
+    compileOnly {
+        extendsFrom annotationProcessor
+    }
+}
+
 repositories {
     mavenCentral()
 }
 
 dependencies {
     implementation project(':module-common')
-    implementation project(':module-domain')
 
     implementation 'org.springframework.boot:spring-boot-starter-web'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
