--- a/module-common/build.gradle
+++ b/module-common/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java-library'
+    id 'org.springframework.boot' version '3.5.0'
     id 'io.spring.dependency-management' version '1.1.7'
 }
 
@@ -14,4 +15,8 @@ java {
 
 repositories {
     mavenCentral()
+}
+
+dependencies {
+    implementation 'org.springframework.boot:spring-boot-starter-web'
 }
