--- a/module-api/src/main/resources/application.yml
+++ b/module-api/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
     password: root1234
   jpa:
     hibernate:
-      ddl-auto: create-drop   # 또는 update
+      ddl-auto: update   # 또는 update
     show-sql: true
     properties:
       hibernate:
