add:flyway 마이그레이션 추가

--- a/module-api/build.gradle
+++ b/module-api/build.gradle
@@ -37,6 +37,10 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
 
     implementation 'mysql:mysql-connector-java:8.0.33'
+
+    // Flyway
+    implementation 'org.flywaydb:flyway-core'
+    implementation 'org.flywaydb:flyway-mysql'
 }
 
 tasks.named('test') {
