--- a/module-api/src/main/resources/application.yml
+++ b/module-api/src/main/resources/application.yml
@@ -6,9 +6,13 @@ spring:
     password: root1234
   jpa:
     hibernate:
-      ddl-auto: update   # 또는 update
+      ddl-auto: none   # 또는 update
     show-sql: true
     properties:
       hibernate:
         format_sql: true
         dialect: org.hibernate.dialect.MySQL8Dialect
+  flyway:
+    enabled: true
+    baseline-on-migrate: true
+    locations: classpath:db/migration
