--- a/module-api/src/main/resources/application.yml
+++ b/module-api/src/main/resources/application.yml
@@ -13,6 +13,6 @@ spring:
         format_sql: true
         dialect: org.hibernate.dialect.MySQL8Dialect
   flyway:
-    enabled: true
+    enabled: false
     baseline-on-migrate: true
     locations: classpath:db/migration
