--- a/module-api/build.gradle
+++ b/module-api/build.gradle
@@ -26,9 +26,6 @@ dependencies {
     implementation project(':module-domain')
 
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-
     implementation 'org.springframework.boot:spring-boot-starter-validation'
 
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
@@ -37,9 +34,16 @@ dependencies {
 
     implementation 'mysql:mysql-connector-java:8.0.33'
 
+    // Security
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+
     // Flyway
     implementation 'org.flywaydb:flyway-core'
     implementation 'org.flywaydb:flyway-mysql'
+
+    // Test
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
 tasks.named('test') {
