--- a/build.gradle
+++ b/build.gradle
@@ -21,4 +21,8 @@ subprojects {
 			languageVersion = JavaLanguageVersion.of(21)
 		}
 	}
+
+	tasks.withType(JavaCompile) {
+		options.compilerArgs << '-parameters'
+	}
 }
