--- a/module-api/build.gradle
+++ b/module-api/build.gradle
@@ -41,6 +41,10 @@ dependencies {
     // Flyway
     implementation 'org.flywaydb:flyway-core'
     implementation 'org.flywaydb:flyway-mysql'
+
+    // QueryDsl
+    implementation "com.querydsl:querydsl-jpa:5.0.0"
+    annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jpa"
 }
 
 tasks.named('test') {
