add:QueryDSL 추가하여 동적쿼리 구현

--- a/module-domain/build.gradle
+++ b/module-domain/build.gradle
@@ -34,8 +34,11 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
 
     // QueryDSL
-    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
-    annotationProcessor 'com.querydsl:querydsl-apt:5.0.0:jakarta'
+    implementation "com.querydsl:querydsl-jpa:5.1.0:jakarta"
+    implementation 'com.querydsl:querydsl-core:5.1.0'
+    annotationProcessor "com.querydsl:querydsl-apt:5.1.0:jakarta"
+    annotationProcessor "jakarta.persistence:jakarta.persistence-api"
+    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
 }
 
 tasks.named('test') {
@@ -48,10 +51,14 @@ sourceSets {
     main.java.srcDirs += [querydslDir]
 }
 
-tasks.withType(JavaCompile) {
+tasks.withType(JavaCompile).configureEach {
     options.getGeneratedSourceOutputDirectory().set(file(querydslDir))
 }
 
-clean.doLast {
-    file(querydslDir).deleteDir()
+clean {
+    delete file(querydslDir)
+}
+
+tasks.named('test') {
+    useJUnitPlatform()
 }
