--- a/module-domain/build.gradle
+++ b/module-domain/build.gradle
@@ -24,6 +24,11 @@ repositories {
 }
 
 dependencies {
+    implementation project(':module-common')
+
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
     // Security
